Updated user side components and tried to implement on video upload by base64

--- a/src/app/modules/user/components/article/article.component.html
+++ b/src/app/modules/user/components/article/article.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="main-container">
     <div class="container-fluid">
         <div class="row sm-flex-row-reverse">
@@ -54,7 +55,10 @@
                                 <div class="clearfix"></div>
                                 <div class="description">
                                     <h4>{{articleVideo.video_title}}</h4>
-                                    <p class="font-light-dark small font-weight-bold"> <span> {{articleVideo.views}} </span> views . Uploaded By <span>  {{articleVideo.uploaded_by}}  </span></p>
+                                    <p class="font-light-dark small font-weight-bold">
+                                        <span> {{articleVideo.views}} </span> views . Uploaded By
+                                        <span> {{articleVideo.uploaded_by}} </span>
+                                    </p>
                                     <dl>
                                         <dt class="mb-2">Description</dt>
                                         <dd class="font-light-dark small font-weight-bold"> {{articleVideo.video_description}}</dd>
@@ -125,7 +129,8 @@
                                                 <a href="#" class="author-name">Rabie Elkheir</a>
                                                 <time datetime="2017-03-24T18:18">July 27, 2014 - 11:00 PM</time>
                                             </div>
-                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+                                            <p>It is a long established fact that a reader will be distracted by the readable
+                                                content of a page when looking at its layout. The point of using Lorem Ipsum</p>
                                             <a href="#" class="reply">Reply</a>
 
                                             <ul class="children">
@@ -139,7 +144,9 @@
                                                         <a href="#" class="author-name">Salam Ahmmed</a>
                                                         <time datetime="2017-03-24T18:18">July 27, 2014 - 11:00 PM</time>
                                                     </div>
-                                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+                                                    <p>It is a long established fact that a reader will be distracted by the
+                                                        readable content of a page when looking at its layout. The point
+                                                        of using Lorem Ipsum</p>
                                                     <a href="#" class="reply">Reply</a>
                                                 </li>
                                             </ul>
@@ -156,7 +163,8 @@
                                                 <a href="#" class="author-name">Salam Ahmmed</a>
                                                 <time datetime="2017-03-24T18:18">July 27, 2014 - 11:00 PM</time>
                                             </div>
-                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+                                            <p>It is a long established fact that a reader will be distracted by the readable
+                                                content of a page when looking at its layout. The point of using Lorem Ipsum</p>
                                             <a href="#" class="reply">Reply</a>
                                         </li>
 
@@ -228,3 +236,4 @@
             </div>
         </div>
     </div>
+    <app-footer></app-footer>
