--- a/src/app/modules/user/components/category-videos/category-videos.component.html
+++ b/src/app/modules/user/components/category-videos/category-videos.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="main-container">
     <div class="container-fluid">
 
@@ -18,12 +19,15 @@
                                 </a>
                                 <div class="overlay">
                                     <div class="text">
-                                        <a href="#"> <i class="fa fa-play mr-2"></i> Watch Video</a>
+                                        <a href="#">
+                                            <i class="fa fa-play mr-2"></i> Watch Video</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="py-2">
-                                <a href="#" class="float-right font-light-dark"> <i class="fa fa-list"></i></a>
+                                <a href="#" class="float-right font-light-dark">
+                                    <i class="fa fa-list"></i>
+                                </a>
                                 <p class="font-light-dark">{{currentVideo.title}} </p>
                             </div>
                         </div>
@@ -34,3 +38,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
