--- a/src/app/modules/user/components/home/home.component.html
+++ b/src/app/modules/user/components/home/home.component.html
@@ -1,9 +1,10 @@
+<app-header>
+</app-header>
 <div id="fixed-bg">
     <div class="main-container">
         <div class="container-fluid bg-main p-3">
             <div class="row ">
                 <div class="col-md-9">
-
                     <div class="clearfix"></div>
                     <div class=" ">
                         <h3 class="category-head pt-4"> Top Viewd </h3>
@@ -45,7 +46,6 @@
                             <div class="slides-wrapper" ng2-carouselamos [items]="musicVideos" [width]="1000" [$prev]="prev" [$next]="next" [$item]="item">
                             </div>
                         </div>
-
                         <div class="clearfix"></div>
                         <div class="border-hr"></div>
                         <h3 class="category-head"> Funny
@@ -68,7 +68,6 @@
                             <div class="slides-wrapper" ng2-carouselamos [items]="rhymesVideos" [width]="1000" [$prev]="prev" [$next]="next" [$item]="item">
                             </div>
                         </div>
-
                         <div class="clearfix"></div>
                         <div class="border-hr"></div>
                         <h3 class="category-head"> Telugu Drama
@@ -80,20 +79,17 @@
                             <div class="slides-wrapper" ng2-carouselamos [items]="dramaVideos" [width]="1000" [$prev]="prev" [$next]="next" [$item]="item">
                             </div>
                         </div>
-
                         <div class="border-hr"></div>
                         <div class="clearfix"></div>
                         <h3 class="category-head"> Sports
                             <a href="#">
                                 <span class="text-success p">View All</span>
                             </a>
-
                         </h3>
                         <div class="row pb-4">
                             <div class="slides-wrapper" ng2-carouselamos [items]="sportsVideos" [width]="1000" [$prev]="prev" [$next]="next" [$item]="item">
                             </div>
                         </div>
-
                         <div class="clearfix"></div>
                         <div class="border-hr"></div>
                         <div class="clearfix"></div>
@@ -154,12 +150,9 @@
                             <div class="slides-wrapper" ng2-carouselamos [items]="danceVideos" [width]="1000" [$prev]="prev" [$next]="next" [$item]="item">
                             </div>
                         </div>
-
                     </div>
                     <div class="clearfix"></div>
-
                 </div>
-
 
                 <div class="col-md-3">
                     <app-sideabar></app-sideabar>
@@ -168,3 +161,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
