--- a/src/app/modules/administrator/components/common/admin-header/admin-header.component.html
+++ b/src/app/modules/administrator/components/common/admin-header/admin-header.component.html
@@ -1,3 +1,8 @@
-<p>
-  admin-header works!
-</p>
+<nav class="navbar navbar-dark fixed-top bg-danger flex-md-nowrap p-0">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">{{app_title}}</a>
+    <ul class="navbar-nav px-3">
+      <li class="nav-item text-nowrap">
+        <a class="nav-link" href="#">Sairam Pasupuleti</a>
+      </li>
+    </ul>
+  </nav>
