--- a/src/app/modules/administrator/components/dashboard/dashboard.component.html
+++ b/src/app/modules/administrator/components/dashboard/dashboard.component.html
@@ -1,3 +1,64 @@
-<p>
-  dashboard works!
-</p>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">Dashboard</h1>
+  <div class="btn-toolbar mb-2 mb-md-0">
+    
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      <div class="card bg-primary">
+        <div class="card-body text-center">
+          <div class="small-box">
+            <div class="inner">
+              <h3>7</h3>
+              <h4>Categories</h4>
+            </div>
+            <div class="icon">
+              <i class="ion ion-bag"></i>
+            </div>
+            <a href="#" class="small-box-footer">More info
+              <i class="fa fa-arrow-circle-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card bg-danger">
+        <div class="card-body text-center">
+          <div class="small-box">
+            <div class="inner">
+              <h3>150</h3>
+              <h4>Videos</h4>
+            </div>
+            <div class="icon">
+              <i class="ion ion-bag"></i>
+            </div>
+            <a href="#" class="small-box-footer">More info
+              <i class="fa fa-arrow-circle-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card bg-yellow">
+        <div class="card-body text-center">
+          <div class="small-box">
+            <div class="inner">
+              <h3>15</h3>
+              <h4>Users</h4>
+            </div>
+            <div class="icon">
+              <i class="ion ion-bag"></i>
+            </div>
+            <a href="#" class="small-box-footer">More info
+              <i class="fa fa-arrow-circle-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
