--- a/src/app/modules/user/components/account/account.component.html
+++ b/src/app/modules/user/components/account/account.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -38,3 +39,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
